engine/crates/engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__field_selections@query { foo { bar baz } qux { quux } }.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo {
		__typename
		bar
		baz
	}

	qux {
		__typename
		quux
	}

}

