engine/crates/engine/src/registry/resolvers/graphql/snapshots/grafbase_engine__registry__resolvers__graphql__serializer__tests__fragment_spread@query { ... foo }.snap
---
source: common/grafbase_engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... foo
}

